<resources>
    <string name="app_name">Каталог автомобилей</string>
    <string name="carDescription">A car (or automobile) is a wheeled motor vehicle used for transportation. Most definitions of cars say that they run primarily on roads, seat one to eight people, have four tires, and mainly transport people rather than goods.</string>
    <string name="save">СОХРАНИТЬ</string>
    <string name="NameOfCar">Название машины</string>
    <string name="title_of_adv">Название объявления</string>
    <string name="price_of_adv">50 000 р</string>
    <string name="photo_of_car">фотография машины</string>
    <string name="description">Описание</string>
    <string name="price">Цена</string>
    <string name="isfav">isFav</string>
</resources>

